Обновление методов и документаций.
